Add image and thumbnail routes to server, add test for the thumbnailifier